# EPendant

./: readme.md  sdkconfig  sdkconfig.old
components/lvgl_esp32_drivers/: lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_tft/: st7789.c
main/: CMakeLists.txt  hello_world_main.cpp  main.cpp
main/Rdriver/: CST816T.cpp  CST816T.h  dht.c  lv_key_driver.cpp  lv_key_driver.hpp  lv_mpu6050_driver.cpp  lv_mpu6050_driver.hpp  touch_driver.cpp  touch_driver.h
main/app/example/: example.cpp  example.h  example_gui.c  example_gui.h
main/app/game_2048/: game2048_contorller.cpp  game2048_contorller.h  game_2048.cpp  game_2048.h  game_2048_gui.c
main/app/idea_anim/: idea.cpp  idea.h  ui_animation.cpp
main/app/irremote/: README.md  irremote.cpp  irremote.h  irremote_gui.cpp  irremote_gui.h  irremote_http.cpp  irremote_http.hpp  irremote_ico.c
main/common/: common.cpp  common.h  lvgl_init.cpp  lvgl_init.h  song_font_10.c  ui.c  ui.h
main/sys/: app_controller.cpp  app_controller.h  app_controller_gui.c  app_controller_gui.h  interface.h  wifi_controller.cpp  wifi_controller.h
